# azure-search-openai-demo

app/backend/: .env.example  app.py  prepdocs.py  pyproject.toml
app/backend/approaches/: chatreadretrieveread.py
app/backend/prepdocslib/: pdfparser.py
