[tool.poetry]
name = "azure-rag-backend"
version = "0.1.0"
description = ""
authors = ["sonta <son.ta.dinh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
azure-identity = "^1.15.0"
quart = "^0.19.3"
quart-cors = "^0.7.0"
openai = {extras = ["datalib"], version = "^0.28.1"}
tiktoken = "^0.5.1"
azure-search-documents = "11.4.0b6"
azure-storage-blob = "^12.18.3"
uvicorn = "^0.23.2"
aiohttp = "^3.8.6"
azure-monitor-opentelemetry = "^1.0.0"
opentelemetry-instrumentation-asgi = "^0.41b0"
opentelemetry-instrumentation-requests = "^0.41b0"
opentelemetry-instrumentation-aiohttp-client = "^0.41b0"
msal = "^1.24.1"
msal-extensions = "^1.0.0"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
